--- a/AlphabetSoupCharity.ipynb
+++ b/AlphabetSoupCharity.ipynb
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -533,36 +533,36 @@
        "Name: CLASSIFICATION, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Determine which values to replace if counts are less than ..?\n",
-    "#  YOUR CODE GOES HERE\n",
+    "replace_class = list(classification_counts[classification_counts < 1500].index)\n",
     "\n",
     "# Replace in dataframe\n",
     "for cls in replace_class:\n",
-    "    application_df.CLASSIFICATION = application_df.CLASSIFICATION.replace(cls,\"Other\")\n",
+    "    clean_application_df.CLASSIFICATION = clean_application_df.CLASSIFICATION.replace(cls,\"Other\")\n",
     "    \n",
     "# Check to make sure binning was successful\n",
-    "application_df.CLASSIFICATION.value_counts()"
+    "clean_application_df.CLASSIFICATION.value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Generate our categorical variable lists\n",
-    "#  YOUR CODE GOES HERE"
+    "application_cat = clean_application_df.dtypes[clean_application_df.dtypes == \"object\"].index.tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +788,7 @@
        "[5 rows x 41 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -798,7 +798,7 @@
     "enc = OneHotEncoder(sparse=False)\n",
     "\n",
     "# Fit and transform the OneHotEncoder using the categorical variable list\n",
-    "#  YOUR CODE GOES HERE\n",
+    "encode_df = pd.DataFrame(enc.fit_transform(clean_application_df[application_cat]))\n",
     "\n",
     "# Add the encoded variable names to the dataframe\n",
     "encode_df.columns = enc.get_feature_names(application_cat)\n",
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1033,32 +1033,35 @@
        "[5 rows x 44 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Merge one-hot encoded features and drop the originals\n",
-    "#  YOUR CODE GOES HERE"
+    "clean_application_df = clean_application_df.merge(encode_df,left_index=True, right_index=True)\n",
+    "clean_application_df = clean_application_df.drop(application_cat,1)\n",
+    "clean_application_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Split our preprocessed data into our features and target arrays\n",
-    "#  YOUR CODE GOES HERE\n",
+    "y = clean_application_df.IS_SUCCESSFUL.values\n",
+    "X = clean_application_df.drop(\"IS_SUCCESSFUL\",1).values\n",
     "\n",
     "# Split the preprocessed data into a training and testing dataset\n",
-    "#  YOUR CODE GOES HERE"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42, stratify=y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
